[package]
name = "regalloc2-fuzz"
version = "0.0.0"
authors = ["Chris Fallin <chris@cfallin.org>"]
license = "MPL-2.0 AND Apache-2.0 WITH LLVM-exception"
publish = false
edition = "2024"
rust-version = "1.93"

[package.metadata]
cargo-fuzz = true

[dependencies]
regalloc2 = { version = "0.13.5", path = "../", features = ["fuzzing"] }
log = { version = "0.4.29", default-features = false }
env_logger = "0.11.9"
libfuzzer-sys = "0.4.12"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "domtree"
path = "fuzz_targets/domtree.rs"
test = false
doc = false

[[bin]]
name = "fastalloc"
path = "fuzz_targets/fastalloc.rs"
test = false
doc = false

[[bin]]
name = "ion"
path = "fuzz_targets/ion.rs"
test = false
doc = false

[[bin]]
name = "moves"
path = "fuzz_targets/moves.rs"
test = false
doc = false

# Enable debug assertions and overflow checks when fuzzing
[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
