[package]
name = "regalloc2-tool"
authors = [
    "Chris Fallin <chris@cfallin.org>",
    "Mozilla SpiderMonkey Developers",
]
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false
license.workspace = true
description = "Tool for testing regalloc2"
repository.workspace = true

[dependencies]
bincode = { workspace = true }
clap = { workspace = true }
pretty_env_logger = { workspace = true }
regalloc2 = { workspace = true, features = ["trace-log", "enable-serde"] }
